# System_of_equations

./: CMakeLists.txt  README.md
method_progonky/src/: CMakeLists.txt  PQ.h  PQX.h  method_progonky.h
method_progonky/tests/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt
src/algorithms/: QR_dec.h  accel_for_symm_method.h  generate_matrix_of_elliptic_equation.h  get_polynom_roots.h  lamda_max.h  lamda_max_for_SOR.h  lamda_max_for_accel.h  permutation.h  stop_cond.h
src/method_progonky/: method_progonky.h
src/primitives/: Arnoldi.h  CSR-matrix.h  CSR_matrix.h  Col_Major_Matrix.h  Upper_Triangular_Matrix.h  matrix.h  matrix_array.h  matrix_from_vector.h  vector_from_vector.h
src/solution_SLAE/: method_BiCG.h  method_CGS.h  method_ConjugateGradients.h  method_GMRES.h  method_Gauss_Seidel.h  method_Jacobi.h  method_QR_dec.h  method_SOR.h  method_progonky.h  method_quick_simple_iteration.h  method_simple_iteration.h  method_steepest_gradient_descent.h  method_symmetriz_Gauss_Seidel.h
tests/: CMakeLists.txt  test_CSR-matrix.cpp  test_CSR_matrix.cpp  test_accel.cpp  test_generate_matrix.cpp  test_matrix.cpp  test_matrix_from_array.cpp  test_matrix_from_vector.cpp  test_method_BiCG.cpp  test_method_CGS.cpp  test_method_ConjugateGradients.cpp  test_method_GMRES.cpp  test_method_Gauss_Seidel.cpp  test_method_Jacobi.cpp  test_method_QR_dec.cpp  test_method_SOR.cpp  test_method_progonky.cpp  test_method_quick_simple_iteration.cpp  test_method_simp_iterate.cpp  test_method_steepest_gradient_descent.cpp  test_method_symm_Gauss_Seidel.cpp  test_vector_from_vector.cpp
time_measure/: CMakeLists.txt  compare_BiCG_vs_CGS.cpp  compare_SOR_of_w.cpp  compare_iteration_method.cpp  compare_matrix_dot.cpp  compare_method_with_accel.cpp
